# pyresilience

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  sitemap.xml  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-merge-dependabot.yml  ci.yml  docs.yml
advanced/combining/: index.html
advanced/frameworks/: index.html
advanced/http/: index.html
advanced/observability/: index.html
advanced/performance/: index.html
advanced/presets/: index.html
advanced/registry/: index.html
api/: index.html
benchmarks/: bench_overhead.py  full_benchmark.py  results_3.10.5.json  results_3.12.6.json  results_3.13.12.json  results_3.14.3.json  stress_test.py
changelog/: index.html
contributing/: index.html
core/bulkhead/: index.html
core/cache/: index.html
core/circuitbreaker/: index.html
core/ratelimiter/: index.html
core/retry/: index.html
core/timelimiter/: index.html
docs/: api.md  changelog.md  contributing.md  index.md  installation.md  requirements.txt  usage.md
docs/advanced/: combining.md  frameworks.md  http.md  observability.md  performance.md  presets.md  registry.md
docs/core/: bulkhead.md  cache.md  circuitbreaker.md  ratelimiter.md  retry.md  timelimiter.md
docs/getting-started/: comparison.md  installation.md  quickstart.md
examples/: async_example.py  basic_retry.py  circuit_breaker.py  combined_patterns.py  fastapi_app.py  presets_example.py  registry_shared_state.py
getting-started/comparison/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
src/pyresilience/: __init__.py  __main__.py  _bulkhead.py  _cache.py  _circuit_breaker.py  _compat.py  _decorator.py  _exceptions.py  _executor.py  _health.py  _logging.py  _presets.py  _rate_limiter.py  _registry.py  _retry_budget.py  _types.py  logging.py  presets.py
src/pyresilience/contrib/: __init__.py  django.py  fastapi.py  flask.py  http.py  otel.py  prometheus.py
tests/: test_bulkhead.py  test_cache.py  test_circuit_breaker.py  test_combined.py  test_compat.py  test_context.py  test_contrib.py  test_contrib_http.py  test_coverage.py  test_events.py  test_fallback.py  test_health.py  test_logging.py  test_main.py  test_otel.py  test_presets.py  test_prometheus.py  test_public_modules.py  test_rate_limiter.py  test_registry.py  test_retry.py  test_retry_budget.py  test_retry_on_result.py  test_shutdown.py  test_sliding_window.py  test_timeout.py
