[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyresilience"
version = "0.1.0"
description = "Unified resilience patterns for Python — retry, circuit breaker, timeout, fallback, and bulkhead in one decorator."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Ahsan Sheraz", email = "ahsansheraz@gmail.com" },
]
keywords = [
    "python", "resilience", "retry", "circuit-breaker", "timeout",
    "fallback", "bulkhead", "fault-tolerance", "decorator", "async",
    "reliability", "microservices", "distributed-systems",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/AhsanSheraz/pyresilience"
Repository = "https://github.com/AhsanSheraz/pyresilience"
Issues = "https://github.com/AhsanSheraz/pyresilience/issues"
Documentation = "https://pyresilience.readthedocs.io/"
Changelog = "https://github.com/AhsanSheraz/pyresilience/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pyresilience"]

[tool.hatch.build.targets.sdist]
include = ["src/pyresilience", "README.md", "LICENSE", "CHANGELOG.md"]

[project.optional-dependencies]
fast = [
    "uvloop>=0.17.0; sys_platform != 'win32'",
    "orjson>=3.9.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
strict = true

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "UP006",  # Use `type` instead of `Type` (3.9 compat)
    "UP007",  # Use X | Y for union types (3.9 compat)
    "UP035",  # Import from `collections.abc` (3.9 compat)
    "UP045",  # Use X | None instead of Optional (3.9 compat)
]

[tool.ruff.lint.isort]
known-first-party = ["pyresilience"]
